Replcaed references to java.security.acl classes. Cleaned up deprecation warnings.